--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,17 @@ button{
   background:none;
   cursor:pointer;
 }
+h3.profile{
+  font-weight:bold;
+  margin: 20px 0;
+  display:flex;
+  align-items: center;
+}
+
+
+span img{
+  border-radius:50%;
+  display:block;
+  margin:0 5px 0 0;
+  max-width: 80px;
+} 
