--- a/src/index.css
+++ b/src/index.css
@@ -149,7 +149,14 @@ button{
   background:none;
   cursor:pointer;
 }
-h3.profile{
+.profile h3{
+  font-weight:bold;
+  margin: 20px 0;
+  display:flex;
+  align-items: center;
+}
+
+.profile p{
   font-weight:bold;
   margin: 20px 0;
   display:flex;
