--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   font-size:18px;
   color: #333;
 }
-.navbar {
+.navbar{
   padding: 20px;
   display: flex;
   align-items: center;
@@ -170,3 +170,28 @@ span img{
   margin:0 5px 0 0;
   max-width: 80px;
 } 
+
+/* Table styles */
+
+#options {
+font-family: Arial, Helvetica, sans-serif;
+border-collapse: collapse;
+width: 100%;
+}
+
+#options td, #options th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#options tr:nth-child(even){background-color: #f2f2f2;}
+
+#options tr:hover {background-color: #ddd;}
+
+#options th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #333;
+  color: white;
+}
