--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,8 @@ span img{
   border-radius:50%;
   display:block;
   margin:0 5px 0 0;
-  max-width: 80px;
+  float:left;
+  max-width: 200px;
 } 
 
 /* Table styles */
