--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,16 @@
   margin: 0 auto;
 }
 .navbar h1, .nav-title{
-  color: #f1356d;
+  color: #e47601;
 }
 
 .page-title h1{
-  color: #f1356d;
+  color: #e47601;
   font-size: 32px;
 }
 
 .page-title h2{
-  color: #f1356d;
+  color: #e47601;
   font-size: calc(2rem * 0.75);
 }
 
@@ -175,12 +175,14 @@ span img{
 /* Table styles */
 
 #options {
+color:black;
 font-family: Arial, Helvetica, sans-serif;
 border-collapse: collapse;
 width: 100%;
 }
 
 #options td, #options th {
+  color:black;
   border: 1px solid #ddd;
   padding: 8px;
 }
@@ -193,6 +195,6 @@ width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #333;
-  color: white;
+  background-color: rgb(52, 177, 235);
+  color: black;
 }
